# rsomics-fastq-pair

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs  smoke.rs
tests/golden/: mr1.fq  mr2.fq  r1.fq  r2.fq
